<resources>
    <string name="app_name">Caddy</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="delete_product">Supprimer ce produit</string>
    <string name="sort_product_by_name">Trier par ordre alphabétique</string>
    <string name="sort_product_by_categories">Trier par catégorie</string>
    <string name="clear_list">Vider la liste</string>
    <string name="remove_list">Supprimer la liste</string>
</resources>