<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.caddy.MainActivity">
    <item
        android:id="@+id/delete_product"
        android:orderInCategory="100"
        android:title="@string/delete_product"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort_product_by_name"
        android:orderInCategory="100"
        android:title="@string/sort_product_by_name"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort_product_by_categories"
        android:orderInCategory="100"
        android:title="@string/sort_product_by_categories"
        app:showAsAction="never" />

    <item
        android:id="@+id/clear_list"
        android:orderInCategory="100"
        android:title="@string/clear_list"
        app:showAsAction="never" />

    <item
        android:id="@+id/remove_list"
        android:orderInCategory="100"
        android:title="@string/remove_list"
        app:showAsAction="never" />

</menu>